Fixed sub-heading (h2) alignment on mobile

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h2 {
   font-style: italic;
   font-weight: 300;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 a {
